--- a/Symptom Selection/Assembly-CSharp.csproj
+++ b/Symptom Selection/Assembly-CSharp.csproj
@@ -62,6 +62,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Scenes\Build\Script\GMBegin.cs" />
+    <Compile Include="Assets\Scenes\Build\Script\SMTutorial.cs" />
     <Compile Include="Assets\Scenes\MVP\DragDropTest\DragDrop.cs" />
     <Compile Include="Assets\Scenes\MVP\DragDropTest\ItemSlot.cs" />
     <Compile Include="Assets\Scenes\MVP\Enum\SM.cs" />
