--- a/Symptom Selection/Assembly-CSharp.csproj
+++ b/Symptom Selection/Assembly-CSharp.csproj
@@ -62,12 +62,13 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Scenes\Build\Script\DragDrop.cs" />
     <Compile Include="Assets\Scenes\Build\Script\GMBegin.cs" />
+    <Compile Include="Assets\Scenes\Build\Script\ItemSlot.cs" />
     <Compile Include="Assets\Scenes\Build\Script\SMPlay1.cs" />
+    <Compile Include="Assets\Scenes\Build\Script\SMPlay2.cs" />
     <Compile Include="Assets\Scenes\Build\Script\SMTutorial.cs" />
     <Compile Include="Assets\Scenes\Build\Script\Talk1.cs" />
-    <Compile Include="Assets\Scenes\MVP\DragDropTest\DragDrop.cs" />
-    <Compile Include="Assets\Scenes\MVP\DragDropTest\ItemSlot.cs" />
     <Compile Include="Assets\Scenes\MVP\Enum\SM.cs" />
     <Compile Include="Assets\Scenes\MVP\Enum\SM2.cs" />
     <Compile Include="Assets\Scenes\MVP\Flashcard\gameManagement.cs" />
