--- a/Symptom Selection/Assembly-CSharp.csproj
+++ b/Symptom Selection/Assembly-CSharp.csproj
@@ -62,6 +62,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Scenes\Build\Script\CheckScore.cs" />
     <Compile Include="Assets\Scenes\Build\Script\DragDrop.cs" />
     <Compile Include="Assets\Scenes\Build\Script\GMBegin.cs" />
     <Compile Include="Assets\Scenes\Build\Script\ItemSlot.cs" />
